-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.9.0, Lustre 2.12.0
-
None
-
CentOS7,.3
Sanity test 244 fail, the fail log is:
sendfile_grouplock: sendfile_grouplock.c:257: sendfile_copy: assertion 'sret > 0' failed: sendfile failed: Input/output error
sanity test_244: @@@@@@ FAIL: sendfile+grouplock failed
Trace dump:
= /lib64/lustre/tests/test-framework.sh:4851:error()
= /lib64/lustre/tests/sanity.sh:13830:test_244()
......
and the kernel message in the client, there is an ldlm error:
LustreError: 11-0: lustre-OST0000-osc-ffff88085169e000: operation ldlm_enqueue to node 10.xxx.x.201@o2ib failed: rc = -107
and the kernel message in the ost show the following errors in the kernel message:
[598085.271427] LustreError: 49547:0:(ldlm_lockd.c:682:ldlm_handle_ast_error()) ### client (nid 10.xxx.x.192@o2ib) returned error from glimpse AST (req@ffff801fbf2e7800 x1573189961819552 status -5 rc -5), evict it ns: filter-lustre-OST0000_UUID lock: ffff801fa0d07c00/0xb727c060c669bd4b lrc: 4/0,0 mode: GROUP/GROUP res: [0x280000400:0x282:0x0].0x0 rrc: 2 type: EXT [0->18446744073709551615] (req 0->18446744073709551615) flags: 0x40000000020000 nid: 10.xxx.x.192@o2ib remote: 0xdf79275a4bf506c3 expref: 8 pid: 49675 timeout: 0 lvb_type: 0
Can some one help me about this issue ? This error seems like: https://jira.hpdd.intel.com/browse/LU-9632?jql=text%20~%20%22sanity%20244%22