lustre/ptlrpc/errno.c
@@ -29,6 +29,7 @@
 #include <lustre_errno.h>
 
 #ifdef LUSTRE_TRANSLATE_ERRNOS
+#include <lustre_dlm.h>
 
 /*
  * The two translation tables below must define a one-to-one mapping between
@@ -185,7 +186,20 @@ static int lustre_errno_hton_mapping[] = {
 	[ESERVERFAULT]		= LUSTRE_ESERVERFAULT,
 	[EBADTYPE]		= LUSTRE_EBADTYPE,
 	[EJUKEBOX]		= LUSTRE_EJUKEBOX,
-	[EIOCBQUEUED]		= LUSTRE_EIOCBQUEUED
+	[EIOCBQUEUED]		= LUSTRE_EIOCBQUEUED,
+
+	/*
+	 * The ELDLM errors are Lustre specific errors whose ranges
+	 * lie in the middle of the above system errors. The ELDLM
+	 * numbers must be preserved to avoid LU-9793.
+	 */
+	[ELDLM_LOCK_CHANGED]	= ELDLM_LOCK_CHANGED,
+	[ELDLM_LOCK_ABORTED]	= ELDLM_LOCK_ABORTED,
+	[ELDLM_LOCK_REPLACED]	= ELDLM_LOCK_REPLACED,
+	[ELDLM_NO_LOCK_DATA]	= ELDLM_NO_LOCK_DATA,
+	[ELDLM_LOCK_WOULDBLOCK]	= ELDLM_LOCK_WOULDBLOCK,
+	[ELDLM_NAMESPACE_EXISTS]= ELDLM_NAMESPACE_EXISTS,
+	[ELDLM_BAD_NAMESPACE]	= ELDLM_BAD_NAMESPACE
 };
 
 static int lustre_errno_ntoh_mapping[] = {
@@ -331,7 +345,20 @@ static int lustre_errno_ntoh_mapping[] = {
 	[LUSTRE_ESERVERFAULT]		= ESERVERFAULT,
 	[LUSTRE_EBADTYPE]		= EBADTYPE,
 	[LUSTRE_EJUKEBOX]		= EJUKEBOX,
-	[LUSTRE_EIOCBQUEUED]		= EIOCBQUEUED
+	[LUSTRE_EIOCBQUEUED]		= EIOCBQUEUED,
+
+	/*
+	 * The ELDLM errors are Lustre specific errors whose ranges
+	 * lie in the middle of the above system errors. The ELDLM
+	 * numbers must be preserved to avoid LU-9793.
+	 */
+	[ELDLM_LOCK_CHANGED]		= ELDLM_LOCK_CHANGED,
+	[ELDLM_LOCK_ABORTED]		= ELDLM_LOCK_ABORTED,
+	[ELDLM_LOCK_REPLACED]		= ELDLM_LOCK_REPLACED,
+	[ELDLM_NO_LOCK_DATA]		= ELDLM_NO_LOCK_DATA,
+	[ELDLM_LOCK_WOULDBLOCK]		= ELDLM_LOCK_WOULDBLOCK,
+	[ELDLM_NAMESPACE_EXISTS]	= ELDLM_NAMESPACE_EXISTS,
+	[ELDLM_BAD_NAMESPACE]		= ELDLM_BAD_NAMESPACE
 };
 
 unsigned int lustre_errno_hton(unsigned int h)
